client/src/components/GORibbon/style.css
.ontology-ribbon {
  margin-top: 50px;
  flex-wrap: nowrap;
}

.ontology-ribbon__block:hover {
  /*font-weight: bold;*/
  color: black;
  text-decoration: underline;
}

.ontology-ribbon__block-tile:hover {
  border: 1px solid black;
}

.ontology-ribbon__strip-label {
  color: grey;
  font-weight: bold;
  font-style: normal;
}

